<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@color/DarkGrayMatte">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/white"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_launcher_foreground"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/login"
        android:layout_alignParentEnd="true"
        style="?android:attr/borderlessButtonStyle"
        android:backgroundTint="@android:color/transparent"/>


    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:layout_centerInParent="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_alignTop="@id/TextView1"
        style="@style/inputStyle"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:maxLength="30"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_below="@id/textInputEmail"
        style="@style/inputStyle"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:maxLength="15"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_below="@id/textInputUsername"
        style="@style/inputStyle"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="Continue"
        android:backgroundTint="@color/Yellow"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:onClick="registerUser"
        android:layout_below="@id/textInputPassword"/>

    <View
        android:id="@+id/vLine1"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:background="@color/DarkGray"
        android:layout_below="@id/btnContinue"
        android:translationY="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textSize="20dp"
        android:textColor="@color/Gray"
        android:layout_below="@id/btnContinue"
        android:layout_centerInParent="true"
        />

    <View
        android:id="@+id/vLine2"
        android:layout_width="150dp"
        android:background="@color/DarkGray"
        android:layout_height="2dp"
        android:layout_below="@id/btnContinue"
        android:layout_alignParentEnd="true"
        android:translationY="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignUpWithGoogle"
        style="@style/buttonStyle1"
        android:layout_below="@id/textView2"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_google"
        android:text="@string/google"
        android:textColor="@color/black">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignUpWithFacebook"
        style="@style/buttonStyle1"
        android:layout_below="@id/btSignUpWithGoogle"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/BlueFB"
        app:icon="@drawable/ic_facebook"
        android:text="@string/facebook"
        android:textColor="@color/white">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_below="@id/btSignUpWithFacebook"
        android:layout_alignLeft="@id/btSignUpWithFacebook"
        android:layout_marginTop="25dp"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_below="@id/btSignUpWithFacebook"
        android:layout_toEndOf="@id/textView3"
        android:layout_marginTop="25dp"/>



</RelativeLayout>